--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -14,7 +14,7 @@
                             <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/avatar-1.jpg" alt="" class="user-avatar-md rounded-circle"></a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                              
-                                <a class="dropdown-item" href="#"><i class="fas fa-user mr-2"></i>Déconnexion</a>
+                                <a class="dropdown-item" routerLink="#" (click) ="logout()"><i class="fas fa-user mr-2"></i>Déconnexion</a>
                                 <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Parametre</a>
                             </div>
                         </li>
