--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,33 +1,41 @@
-<body>
+<body style="padding-top: 10%;">
     <!-- ============================================================== -->
     <!-- login page  -->
     <!-- ============================================================== -->
     <div class="splash-container">
         <div class="card ">
-            <div class="card-header text-center"><a href="../index.html"><img class="logo-img" src="../assets/images/logo.png" alt="logo"></a><span class="splash-description">Please enter your user information.</span></div>
+            <div class="card-header text-center"><a href="../index.html"><img class="logo-img" src="../assets/images/login.jpg" alt="logo" style="width: 120px;"></a><span class="splash-description">Please enter your user information.</span></div>
             <div class="card-body">
-                <form>
+                <form (submit)="login()" [formGroup]="loginForm">
                     <div class="form-group">
-                        <input class="form-control form-control-lg" id="username" type="text" placeholder="Username" autocomplete="off">
+                        <input class="form-control form-control-lg" formControlName="username" type="text" placeholder="Username" autocomplete="off"
+                        [ngClass]="{
+                            'is-invalid': loginForm.get('username').touched && !loginForm.get('username').valid
+                        }">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                            <span *ngIf="loginForm.get('username').errors?.required">Entrez le nom utilisateur</span>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <input class="form-control form-control-lg" id="password" type="password" placeholder="Password">
+                        <input class="form-control form-control-lg" formControlName="password" type="password" placeholder="Password"
+                        [ngClass]="{
+                            'is-invalid': loginForm.get('password').touched && !loginForm.get('password').valid
+                        }">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                            <span *ngIf="loginForm.get('password').errors?.required">Entrez le mot de passe</span>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label class="custom-control custom-checkbox">
-                            <input class="custom-control-input" type="checkbox"><span class="custom-control-label">Remember Me</span>
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+                    
+                    <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary btn-lg btn-block">Connexion</button>
                 </form>
             </div>
-            <div class="card-footer bg-white p-0  ">
-                <div class="card-footer-item card-footer-item-bordered">
-                    <a href="#" class="footer-link">Create An Account</a></div>
-                <div class="card-footer-item card-footer-item-bordered">
-                    <a href="#" class="footer-link">Forgot Password</a>
-                </div>
-            </div>
+           
         </div>
     </div>
   
@@ -35,7 +43,5 @@
     <!-- end login page  -->
     <!-- ============================================================== -->
     <!-- Optional JavaScript -->
-    <script src="../assets/vendor/jquery/jquery-3.3.1.min.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
  
