--- a/src/app/pages/gestion-unite/gestion-unite.component.html
+++ b/src/app/pages/gestion-unite/gestion-unite.component.html
@@ -58,12 +58,12 @@
                                 </tbody>
                                 <tfoot>
                                     <tr>
-                                        <th>  </th>
+                                        <th>  <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons
+                                            style="color:#3c65e8;"> </mat-paginator></th>
                                         <th>Nombre Total:</th>
                                     </tr>
                                 </tfoot>
                             </table>
-                          
                         </div>
                     </div>
                 </div>
