--- a/src/app/pages/gestion-unite/gestion-unite.component.html
+++ b/src/app/pages/gestion-unite/gestion-unite.component.html
@@ -41,7 +41,9 @@
                                 <thead>
                                     <tr>
                                         <th>Identifiant</th>
-                                        <th>Désignation</th>
+                                        <th>Nom</th>
+                                        <th>Action</th>
+                                  
 
                                     </tr>
                                 </thead>
@@ -50,20 +52,21 @@
                                     <tr>
                                         <td>Ashton Cox</td>
                                         <td>Junior Technical Author</td>
+                                  
+                                        <td>A</td>
                                        
                                     </tr>
                                 
                             
                                 
                                 </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <th>  <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons
-                                            style="color:#3c65e8;"> </mat-paginator></th>
-                                        <th>Nombre Total:</th>
-                                    </tr>
-                                </tfoot>
+                               
+                                  
+                                    
+                              
                             </table>
+                            <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons
+                                            style="color:#3c65e8;"></mat-paginator>
                         </div>
                     </div>
                 </div>
