--- a/src/app/pages/audit/audit.component.html
+++ b/src/app/pages/audit/audit.component.html
@@ -1,1 +1,86 @@
-<p>audit works!</p>
+<body>
+    <!-- ============================================================== -->
+    <!-- main wrapper -->
+    <!-- ============================================================== -->
+    <div class="dashboard-main-wrapper">
+        <!-- ============================================================== -->
+        <app-navbar></app-navbar>
+        <!-- ============================================================== -->
+        <app-sidebar></app-sidebar>
+        <!-- ============================================================== -->
+    
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <div class="dashboard-wrapper">
+            <div class="dashboard-ecommerce">
+                <div class="container-fluid dashboard-content ">
+                  
+            <!-- ============================================================== -->
+            <!-- basic table  -->
+            <!-- ============================================================== -->
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="card">
+                    <h5 class="card-header">GESTION DES AUDITS</h5>
+                    <div class="card-header" style="text-align: right;">
+                        <button class="btn btn-block btn-primary btn-xl" routerLink="/funite" style="width: 200px;">Nouvel audit</button>
+                    </div>
+                    
+                    <div class="card-body">
+                       
+                            <div class="email-search">
+                                <div class="input-group input-search">
+                                    <input class="form-control" type="text" placeholder="Search mail..."><span class="input-group-btn">
+                                   <button class="btn btn-secondary" type="button"><i class="fas fa-search"></i></button></span>
+                                </div>
+                            </div>
+                        
+                        <br>
+                        <div class="table-responsive">
+                            <br>
+                            <table class="table table-striped table-bordered first">
+                                <thead>
+                                    <tr>
+                                        <th>Identifiant</th>
+                                        <th>Date</th>
+                                        <th>Auditeur</th>
+                                        <th>Mission</th>
+                                        <th>Action</th>
+                                  
+
+                                    </tr>
+                                </thead>
+                                <tbody>
+                               
+                                    <tr>
+                                        <td>Ashton Cox</td>
+                                        <td>Junior Technical Author</td>
+                                        <td>Ashton Cox</td>
+                                        <td>Junior Technical Author</td>
+                                  
+                                        <td>A</td>
+                                       
+                                    </tr>
+                                
+                            
+                                
+                                </tbody>
+                               
+                                  
+                                    
+                              
+                            </table>
+                            <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons
+                                            style="color:#3c65e8;"></mat-paginator>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           
+        </div>
+
+    </div>  </div>
+
+        <!-- ============================================================== -->
+        <app-footer></app-footer>
+    </div>
+<body>  
